--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node": "^12.12.14",
+    "dotenv": "^8.2.0",
+    "https": "^1.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "netlify": "^3.0.0",
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0"
