--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@types/node": "^12.12.14",
+    "@zeit/next-css": "^1.0.1",
     "dotenv": "^8.2.0",
     "https": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "netlify": "^3.0.0",
     "next": "9.1.4",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "react-imgix": "^9.0.1"
   }
 }
