--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "https": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "netlify": "^3.0.0",
-    "next": "9.1.4",
+    "next": "9.2.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-imgix": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.19"
   }
 }
