--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@types/node": "^14.0.5",
     "dotenv": "^8.2.0",
     "https": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
@@ -19,6 +18,8 @@
     "react-imgix": "^9.0.2"
   },
   "devDependencies": {
-    "@types/react": "^16.9.35"
+    "@types/node": "^14.0.5",
+    "@types/react": "^16.9.35",
+    "typescript": "^3.9.3"
   }
 }
