--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "https": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "lazysizes": "^5.2.1-rc2",
     "netlify": "^4.1.7",
     "next": "^9.4.2",
     "react": "16.13.1",
