--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react-window": "^1.8.2",
     "dotenv": "^8.2.0",
     "https": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
