--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "https": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "netlify": "^4.7.0",
-    "next": "^9.5.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "next": "^10.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-imgix": "^9.0.2",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5"
