--- a/package.json
+++ b/package.json
@@ -8,17 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@types/react-window": "^1.8.2",
-    "dotenv": "^8.2.0",
     "https": "^1.0.0",
-    "isomorphic-fetch": "^3.0.0",
     "netlify": "^11.0.1",
     "next": "^12.1.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-imgix": "^9.5.1",
-    "react-virtualized-auto-sizer": "^1.0.6",
-    "react-window": "^1.8.6"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.42",
