--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "routes": [
     {
       "src": "/([a-zA-Z0-9\\-]+)\\.(png|gif|jpe?g)",
-      "dest": "https://de-gifs.netlify.com/$1.$2"
+      "dest": "https://de-gifs.netlify.com$1.$2"
     }
   ]
 }
